[tool.poetry]
name = "autogputracker"
version = "0.1.0"
description = ""
authors = ["I_Cheered <tjeerd992@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
ConfigArgParse = "^1.2.3"
loguru = "^0.5.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
